# GenXPS_public

genXPS/: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
genXPS/data/experimental_data/Ethylcellulose (ECEL)/: ECEL.csv  ECEL_FG.xlsx  ECEL_SMILES.xlsx  Ethylcellulose.xlsx
genXPS/data/experimental_data/Hydroxypropylycellulose (HPCEL)/: HPCEL.csv  HPCEL_FG.xlsx  HPCEL_SMILES.xlsx  Hydroxypropylycellulose.xlsx
genXPS/data/experimental_data/N,N'-Diphenyl-1,4-phenylenediamine [poly(aniline) oligomer]/: N,N'-Diphenyl-1,4-phenylenediamine [poly(aniline) oligomer].csv  N,N'-Diphenyl-1,4-phenylenediamine [poly(aniline) oligomer].xlsx  N,N'-Diphenyl-1,4-phenylenediamine [poly(aniline) oligomer]_FG.xlsx  N,N'-Diphenyl-1,4-phenylenediamine [poly(aniline) oligomer]_SMILES.xlsx
genXPS/data/experimental_data/Nylon 12 (N12)/: N12.csv  N12_FG.xlsx  N12_SMILES.xlsx  Nylon 12.xlsx
genXPS/data/experimental_data/Nylon 6 (N6)/: N6.csv  N6_FG.xlsx  N6_SMILES.xlsx  Nylon 6.xlsx
genXPS/data/experimental_data/Nylon 6,6 (N66)/: N66.csv  N66_FG.xlsx  N66_SMILES.xlsx  Nylon 6,6.xlsx
genXPS/data/experimental_data/Poly(2-chloroethyl methacrylate) (PCEMA)/: PCEMA.csv  PCEMA_FG.xlsx  PCEMA_SMILES.xlsx  Poly(2-chloroethyl methacrylate).xlsx
genXPS/data/experimental_data/cellulose (CEL)/: CEL.csv  CEL_FG.xlsx  CEL_SMILES.xlsx  cellulose.xlsx
genXPS/data/experimental_data/cellulose triacetate (CTA)/: CTA.csv  CTA_FG.xlsx  CTA_SMILES.xlsx  cellulose triacetate.xlsx
genXPS/data/experimental_data/cellulose trinitrate (CTN)/: CTN.csv  CTN_FG.xlsx  CTN_SMILES.xlsx  cellulose trinitrate.xlsx
genXPS/data/experimental_data/p-Quaterphenyl [poly(phenylene) oligomer]/: p-Quaterphenyl [poly(phenylene) oligomer].csv  p-Quaterphenyl [poly(phenylene) oligomer].xlsx  p-Quaterphenyl [poly(phenylene) oligomer]_FG.xlsx  p-Quaterphenyl [poly(phenylene) oligomer]_SMILES.xlsx
genXPS/genXPS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
genXPS/notebooks/: classifier_training.ipynb  generative_model.ipynb  latent_vis.ipynb  plot_making.ipynb  xps-datagen.ipynb
genXPS/notebooks/.ipynb_checkpoints/: binary_classifier-checkpoint.ipynb  conv_multi_classifier-checkpoint.ipynb  multi_classifier-checkpoint.ipynb  quant_model-checkpoint.ipynb  xps-datagen-checkpoint.ipynb
genXPS/reports/: model0.csv
genXPS/tests/: test_foo.py
(+199850 files in other folders)
